Add d3 map component

--- a/frontend/app/templates/application.hbs
+++ b/frontend/app/templates/application.hbs
@@ -67,7 +67,7 @@
     <section class="wrapper site-min-height">
       {{!-- <h3> Testing Radar Chart </h3> --}}
       <div class="row mt">
-        {{outlet}}
+        {{carto-map}}
         {{!-- {{radar-chart}}
         {{line-chart}}
         {{doughnut-chart}} --}}
