--- a/frontend/app/styles/layout/_sidebar.sass
+++ b/frontend/app/styles/layout/_sidebar.sass
@@ -100,10 +100,22 @@ ul.top-menu > li > .logout
     &:last-child
       padding-bottom: 10px
 
-// Map
+// Map //
 #map-world
   height: 700px
   width: 700px
+
+#map 
+  height: 1000px
+  width: 1000px
+  position: absolute
+
+.country
+  fill-opacity: 1
+  fill: #4682B4
+  stroke-opacity: 1
+  stroke: black
+  stroke-width: 2px
 
 // Profile Icon
 .profile-circle
