--- a/frontend/app/styles/general/_test.sass
+++ b/frontend/app/styles/general/_test.sass
@@ -31,3 +31,14 @@
   stroke-opacity: 1
   stroke: black
   stroke-width: 2px
+
+.states :hover
+  fill: red
+
+.state-borders
+  fill: none
+  stroke: #fff
+  stroke-width: 0.5px
+  stroke-linejoin: round
+  stroke-linecap: round
+  pointer-events: none
