Create map to screen size & add padding to content container

--- a/frontend/app/styles/general/_test.sass
+++ b/frontend/app/styles/general/_test.sass
@@ -20,9 +20,10 @@
   height: 700px
   width: 700px
 
-#map 
-  height: 1000px
-  width: 1000px
+#map
+  padding-top: 60px
+  height: 100%
+  width: 100%
   position: absolute
 
 .country
