Add predictions-sidebar container

--- a/frontend/app/styles/general/_test.sass
+++ b/frontend/app/styles/general/_test.sass
@@ -24,6 +24,7 @@
   height: 100%
   width: 100%
   position: absolute
+  padding-left: 225px
 
 .country
   fill-opacity: 1
@@ -42,3 +43,11 @@
   stroke-linejoin: round
   stroke-linecap: round
   pointer-events: none
+
+.predictions-sidebar
+  width: 225px
+  height: 100%
+  background-color: black
+  position: absolute
+
+.predictions-container
