--- a/frontend/app/templates/application.hbs
+++ b/frontend/app/templates/application.hbs
@@ -65,7 +65,10 @@
   {{!-- Content --}}
   <section id="main-content">
       {{!-- <h3> Testing Radar Chart </h3> --}}
-      {{d3-test}}
+      <div class="predictions-container">
+        {{predictions-sidebar}}
+        {{d3-test}}
+      </div>
       {{!-- {{radar-chart}}
       {{line-chart}}
       {{doughnut-chart}} --}}
