--- a/frontend/app/templates/application.hbs
+++ b/frontend/app/templates/application.hbs
@@ -66,6 +66,7 @@
   <section id="main-content">
       {{!-- <h3> Testing Radar Chart </h3> --}}
       <div class="predictions-container">
+        {{predictions-toolbar}}
         {{predictions-sidebar}}
         {{d3-test}}
       </div>
