--- a/frontend/app/styles/app/_predictions.sass
+++ b/frontend/app/styles/app/_predictions.sass
@@ -2,7 +2,7 @@
   padding-top: 60px
   width: 225px
   height: 100%
-  background-color: black
+  background-color: #aeb2b4
   position: absolute
 
 .predictions-toolbar
@@ -10,6 +10,6 @@
   width: 100%
   height: 60px
   z-index: 1000
-  background-color: green
+  background-color: #6fa6cc
 
 .predictions-container
