--- a/frontend/app/styles/app.scss
+++ b/frontend/app/styles/app.scss
@@ -1,4 +1,4 @@
 @import 'layout/sidebar';
 @import 'general/helpers';
 @import 'general/test';
-@import 'app/predictions';
+@import 'app/projections';
