Change predictions css names to projections

--- a/frontend/app/templates/application.hbs
+++ b/frontend/app/templates/application.hbs
@@ -65,9 +65,9 @@
   {{!-- Content --}}
   <section id="main-content">
       {{!-- <h3> Testing Radar Chart </h3> --}}
-      <div class="predictions-container">
-        {{predictions-toolbar}}
-        {{predictions-sidebar}}
+      <div class="projections-container">
+        {{projections-toolbar}}
+        {{projections-sidebar}}
         {{d3-test}}
       </div>
       {{!-- {{radar-chart}}
