--- a/frontend/app/styles/app/_projections.sass
+++ b/frontend/app/styles/app/_projections.sass
@@ -1,15 +1,15 @@
-.predictions-sidebar
+.projections-sidebar
   padding-top: 60px
   width: 225px
   height: 100%
   background-color: #aeb2b4
   position: absolute
 
-.predictions-toolbar
+.projections-toolbar
   position: absolute
   width: 100%
   height: 60px
   z-index: 1000
   background-color: #6fa6cc
 
-.predictions-container
+.projections-container
