Show nuevoLeon Datamaps component

--- a/frontend/app/templates/application.hbs
+++ b/frontend/app/templates/application.hbs
@@ -69,6 +69,7 @@
         {{projections-toolbar}}
         {{projections-sidebar}}
         {{d3-test}}
+        {{!-- {{datamaps-map}} --}}
       </div>
       {{!-- {{radar-chart}}
       {{line-chart}}
