--- a/frontend/app/templates/application.hbs
+++ b/frontend/app/templates/application.hbs
@@ -22,41 +22,21 @@
     <div id="sidebar" class="sidebar-box nav-collapse">
       <ul class="sidebar-menu" id="nav-accordion">
 
-        <li class="mt">
-          <a href="#">
+        <li class="sub-menu mt">
+          <a>
             <i class="fa fa-dashboard"></i>
-            <span>Dashboard</span>
           </a>
         </li>
 
         <li class="sub-menu">
-          <a href="javascript:;" >
+          <a>
             <i class="fa fa-tasks"></i>
-            <span>Formas</span>
           </a>
-          <ul class="sub">
-            <li><a  href="#">Form Components</a></li>
-          </ul>
         </li>
         <li class="sub-menu">
-          <a href="javascript:;" >
-            <i class="fa fa-th"></i>
-            <span>Tablas</span>
+          <a>
+            <i class="fa fa-bar-chart-o"></i>
           </a>
-          <ul class="sub">
-            <li><a  href="#">Basic Table</a></li>
-            <li><a  href="#">Responsive Table</a></li>
-          </ul>
-        </li>
-        <li class="sub-menu">
-          <a href="javascript:;" >
-            <i class=" fa fa-bar-chart-o"></i>
-            <span>Graficas</span>
-          </a>
-          <ul class="sub">
-            <li><a  href="#">Morris</a></li>
-            <li><a  href="#">Chartjs</a></li>
-          </ul>
         </li>
       </ul>
     </div>
