Change sidebar icons

--- a/frontend/app/templates/application.hbs
+++ b/frontend/app/templates/application.hbs
@@ -24,13 +24,13 @@
 
         <li class="sub-menu mt">
           <a>
-            <i class="fa fa-dashboard"></i>
+            <i class="fa fa-map-o"></i>
           </a>
         </li>
 
         <li class="sub-menu">
           <a>
-            <i class="fa fa-tasks"></i>
+            <i class="fa fa-file-o"></i>
           </a>
         </li>
         <li class="sub-menu">
