Improve CSS of projections layout

--- a/frontend/app/styles/general/_test.sass
+++ b/frontend/app/styles/general/_test.sass
@@ -23,8 +23,9 @@
 #map
   height: 100%
   width: 100%
-  position: absolute
+  position: fixed
   padding-left: 225px
+  padding-top: 60px
 
 .country
   fill-opacity: 1
