--- a/frontend/app/styles/app/_projections.sass
+++ b/frontend/app/styles/app/_projections.sass
@@ -3,7 +3,7 @@
   width: 225px
   height: 100%
   background-color: #aeb2b4
-  position: absolute
+  position: fixed
 
 .projections-toolbar
   position: absolute
@@ -13,3 +13,4 @@
   background-color: #6fa6cc
 
 .projections-container
+  position: relative
