--- a/frontend/app/styles/layout/_sidebar.sass
+++ b/frontend/app/styles/layout/_sidebar.sass
@@ -161,7 +161,7 @@ ul.sidebar-menu li
       -ms-transition: all 0.3s ease
       transition: all 0.3s ease
     i
-      font-size: 25px
+      font-size: $sidebar-icon-size
       padding-right: 6px
     &:hover i, &:focus i, &.active i
       color: #fff
