Add card effect to inner projections layout

--- a/frontend/app/styles/app/_projections.sass
+++ b/frontend/app/styles/app/_projections.sass
@@ -4,6 +4,8 @@
   height: 100%
   background-color: #aeb2b4
   position: fixed
+  box-shadow: 0 2px 5px 0 rgba(0,0,0,.26)
+  background-color: #fbfbfb
 
 .projections-toolbar
   position: absolute
@@ -11,6 +13,8 @@
   height: 60px
   z-index: 1000
   background-color: #6fa6cc
+  box-shadow: 0 2px 5px 0 rgba(0,0,0,.26)
+  background-color: #fbfbfb
 
 .projections-container
   position: relative
