Add tile to mexico inital map

--- a/frontend/app/styles/general/_test.sass
+++ b/frontend/app/styles/general/_test.sass
@@ -3,7 +3,8 @@
 	pointer-events: all
 
 .feature 
-	fill: #ccc
+	fill: #ffd777
+  opacity: .4
 	cursor: pointer
 
 .feature.active
@@ -26,6 +27,15 @@
   position: fixed
   padding-left: 225px
   padding-top: 60px
+
+.svg-map
+  position: absolute
+
+#tiles
+  height: 100%
+  width: 100%
+  position: fixed
+  padding-left: 225px
 
 .country
   fill-opacity: 1
