Create calculateZoomToBBox function

--- a/frontend/app/styles/general/_test.sass
+++ b/frontend/app/styles/general/_test.sass
@@ -1,20 +1,22 @@
 .map-background
-	fill: none
-	pointer-events: all
+  fill: none
+  pointer-events: all
 
 .feature 
-	fill: #ffd777
-  opacity: .4
-	cursor: pointer
+  fill: #424a5d
+  opacity: 1
+  cursor: pointer
+  &:hover
+    opacity: .8
 
 .feature.active
-	fill: #6fa6cc
+  fill: #6fa6cc
 
 .mesh
-	fill: none
-	stroke: #fff
-	stroke-linecap: round
-	stroke-linejoin: round
+  fill: none
+  stroke: #424a5d
+  stroke-linecap: round
+  stroke-linejoin: round
 
 // Map
 #map-world
