--- a/frontend/app/styles/general/_test.sass
+++ b/frontend/app/styles/general/_test.sass
@@ -4,17 +4,18 @@
 
 .feature 
   fill: #424a5d
-  opacity: .4
+  opacity: 0
   cursor: pointer
   &:hover
     opacity: .6
 
 .feature.active
   fill: #6fa6cc
+  opacity: .5
 
 .mesh
   fill: none
-  stroke: #424a5d
+  stroke: #f2efe9
   stroke-linecap: round
   stroke-linejoin: round
 
