Add municipalities as objects

--- a/frontend/app/styles/general/_test.sass
+++ b/frontend/app/styles/general/_test.sass
@@ -13,6 +13,18 @@
   fill: #6fa6cc
   opacity: .5
 
+
+.municipality 
+  fill: #009688
+  opacity: 0
+  cursor: pointer
+  &:hover
+    opacity: .4
+
+.municipality.active
+  fill: #009688
+  opacity: .8
+
 .mesh
   fill: none
   stroke: black
