Add more comments and clean code

--- a/frontend/app/styles/general/_test.sass
+++ b/frontend/app/styles/general/_test.sass
@@ -23,11 +23,12 @@
 
 .municipality.active
   fill: #009688
-  opacity: .8
+  opacity: .6
 
 .mesh
   fill: none
-  stroke: black
+  opacity: .5
+  stroke: #908e8e
   stroke-linecap: round
   stroke-linejoin: round
 
