Fix problem with sections with the stroke

--- a/frontend/app/styles/general/_test.sass
+++ b/frontend/app/styles/general/_test.sass
@@ -2,17 +2,25 @@
   fill: none
   pointer-events: all
 
-.feature 
-  fill: #424a5d
-  opacity: 0
-  cursor: pointer
+// .feature 
+//   fill: #424a5d
+//   opacity: .3
+//   cursor: pointer
+//   stroke-linejoin: round
+//   &:hover
+//     opacity: .6
+
+// .feature.active
+//   fill: #6fa6cc
+//   opacity: .5
+
+.feature
+  fill: black
+  opacity: .2
+  stroke: white
+  stroke-linejoin: round
   &:hover
     opacity: .6
-
-.feature.active
-  fill: #6fa6cc
-  opacity: .5
-
 
 .municipality 
   fill: #009688
