Add queryParams to projections

--- a/frontend/app/templates/application.hbs
+++ b/frontend/app/templates/application.hbs
@@ -47,12 +47,7 @@
   {{!-- Content --}}
   <section id="main-content">
       {{!-- <h3> Testing Radar Chart </h3> --}}
-      <div class="projections-container">
-        {{projections-toolbar}}
-        {{projections-sidebar}}
-        {{d3-test}}
-        {{!-- {{datamaps-map}} --}}
-      </div>
+      {{outlet}}
       {{!-- {{radar-chart}}
       {{line-chart}}
       {{doughnut-chart}} --}}
