--- a/frontend/app/templates/projections/projection.hbs
+++ b/frontend/app/templates/projections/projection.hbs
@@ -1,3 +1,4 @@
-<h2>Mostrando: {{model.name}}</h2>
+{{!-- <h2>Mostrando: {{model.name}}</h2>
 
-{{test-map map=model}}
+{{test-map map=model}} --}}
+
