--- a/frontend/app/templates/projections.hbs
+++ b/frontend/app/templates/projections.hbs
@@ -1,5 +1,5 @@
 <div class="projections-container">
-	{{projections-toolbar state=state setState='setState'}}
+	{{projections-toolbar state=state municipality=municipality setState='setState' setMunicipality='setMunicipality'}}
 	{{projections-sidebar}}
 	{{d3-test}}
 	{{!-- {{datamaps-map}} --}}
