--- a/frontend/app/styles/app/_projections.sass
+++ b/frontend/app/styles/app/_projections.sass
@@ -19,3 +19,32 @@
 
 .projections-container
   position: relative
+
+.map-breadcrumbs
+  display: inline-block
+
+.searchbar
+  width: 93%
+
+.searchbar-container
+  width: 300px
+  float: right
+  display: inline-block
+  text-align: right
+  padding-top: 2px
+  padding-bottom: 0px
+  margin-left: 0px
+  color: #9e9e9e
+  input
+    margin-left: 0px
+    color: #8b8b8b
+    border-bottom: 1px solid #9e9e9e
+  input[type=search]
+    padding: 5px 22px 5px 5px
+    font-size: 11px
+    border: 1px solid #d4d4d4
+    &:focus
+      border: 1px solid #44cde0
+  label
+    top: auto
+    color: #9e9e9e
