--- a/frontend/app/styles/app/_projections.sass
+++ b/frontend/app/styles/app/_projections.sass
@@ -25,8 +25,12 @@
 
 .searchbar
   width: 93%
+  border: none
+  background-color: transparent
 
 .searchbar-container
+  height: 100%
+  padding: 20px !important
   width: 300px
   float: right
   display: inline-block
@@ -38,13 +42,11 @@
   input
     margin-left: 0px
     color: #8b8b8b
-    border-bottom: 1px solid #9e9e9e
   input[type=search]
     padding: 5px 22px 5px 5px
     font-size: 11px
-    border: 1px solid #d4d4d4
     &:focus
-      border: 1px solid #44cde0
+      outline: none
   label
     top: auto
     color: #9e9e9e
