--- a/frontend/app/styles/app/_projections.sass
+++ b/frontend/app/styles/app/_projections.sass
@@ -22,6 +22,8 @@
 
 .map-breadcrumbs
   display: inline-block
+  height: 100%
+  padding: 20px 20px 20px 0px
 
 .searchbar
   width: 93%
@@ -50,3 +52,7 @@
   label
     top: auto
     color: #9e9e9e
+
+.map-link
+  display: inline
+  font-size: 18px
