--- a/frontend/app/styles/app/_projections.sass
+++ b/frontend/app/styles/app/_projections.sass
@@ -25,6 +25,11 @@
   height: 100%
   padding: 20px 20px 20px 0px
 
+.map-link
+  display: inline
+  font-size: 18px
+  color: #8e8d8d
+
 .searchbar
   width: 93%
   border: none
@@ -45,14 +50,10 @@
     margin-left: 0px
     color: #8b8b8b
   input[type=search]
-    padding: 5px 22px 5px 5px
-    font-size: 11px
+    border-bottom: 1px solid #c4c4c2
+    font-size: 15px
     &:focus
       outline: none
   label
     top: auto
     color: #9e9e9e
-
-.map-link
-  display: inline
-  font-size: 18px
