Initial map breadcrumbs functionality

--- a/frontend/app/templates/components/projections-toolbar.hbs
+++ b/frontend/app/templates/components/projections-toolbar.hbs
@@ -4,11 +4,19 @@
 	
 		<ul class="map-links">
 			<li class="map-link">
-				México >
+				México
 			</li>
+			{{#if state}}
 			<li class="map-link">
-				Nuevo León			
+				> {{state}}			
 			</li>
+			{{/if}}
+
+			{{#if municipality}}
+			<li class="map-link">
+				> {{municipality}}			
+			</li>
+			{{/if}}
 		</ul>
 	</div>
 
