Draw section when clicking municipality in NL

--- a/frontend/app/templates/components/projections-toolbar.hbs
+++ b/frontend/app/templates/components/projections-toolbar.hbs
@@ -17,6 +17,12 @@
 				> {{municipality}}			
 			</li>
 			{{/if}}
+
+			{{#if section}}
+			<li class="map-link">
+				> {{section}}			
+			</li>
+			{{/if}}
 		</ul>
 	</div>
 
