--- a/frontend/app/templates/projections.hbs
+++ b/frontend/app/templates/projections.hbs
@@ -1,6 +1,6 @@
 <div class="projections-container">
-	{{projections-toolbar state=state municipality=municipality setState='setState' setMunicipality='setMunicipality'}}
+	{{projections-toolbar state=state municipality=municipality section=section setState='setState' setMunicipality='setMunicipality'}}
 	{{projections-sidebar}}
-	{{d3-test setState='setState' setMunicipality='setMunicipality'}}
+	{{d3-test state=state municipality=municipality section=section setState='setState' setMunicipality='setMunicipality' setSection='setSection'}}
 	{{!-- {{datamaps-map}} --}}
 </div>
