Change style of map features

--- a/frontend/app/styles/general/_test.sass
+++ b/frontend/app/styles/general/_test.sass
@@ -14,9 +14,17 @@
 //   fill: #6fa6cc
 //   opacity: .5
 
+.section
+  fill: #636262
+  opacity: .2
+  stroke: black
+  stroke-linejoin: round
+  &:hover
+    opacity: .6
+
 .feature
   fill: black
-  opacity: .2
+  opacity: 0
   stroke: white
   stroke-linejoin: round
   &:hover
@@ -35,8 +43,8 @@
 
 .mesh
   fill: none
-  opacity: .5
-  stroke: #908e8e
+  opacity: 1
+  stroke: #424a5d
   stroke-linecap: round
   stroke-linejoin: round
 
