Remove level label from map toolbar

--- a/frontend/app/templates/components/projections-toolbar.hbs
+++ b/frontend/app/templates/components/projections-toolbar.hbs
@@ -20,13 +20,9 @@
 
 			{{#if section}}
 			<li class="map-link">
-				> {{section}}			
+				> Sección: {{section}}			
 			</li>
 			{{/if}}
-
-			<li class="map-link">
-				level: {{level}}
-			</li>
 		</ul>
 	</div>
 
