--- a/frontend/app/templates/projections.hbs
+++ b/frontend/app/templates/projections.hbs
@@ -1,5 +1,5 @@
 <div class="projections-container">
-	{{projections-toolbar level=level state=state municipality=municipality section=section setState='setState' setMunicipality='setMunicipality'}}
+	{{projections-toolbar level=level state=state municipality=municipality section=section setState='setState' setMunicipality='setMunicipality' setSection='setSection'}}
 	{{projections-sidebar}}
 	{{d3-test level=level state=state municipality=municipality section=section setState='setState' setMunicipality='setMunicipality' setSection='setSection'}}
 	{{!-- {{datamaps-map}} --}}
