Add borders of states and municipalities, remove borders from sections

--- a/frontend/app/styles/general/_test.sass
+++ b/frontend/app/styles/general/_test.sass
@@ -16,17 +16,16 @@
 
 .section
   opacity: .4
-  stroke: black
   stroke-linejoin: round
   &:hover
     opacity: .6
 
 .feature
-  fill: black
-  opacity: 0
-  stroke: white
+  fill: transparent
+  stroke: #a2a5a7
   stroke-linejoin: round
   &:hover
+    fill: #a2a5a7
     opacity: .6
 
 .municipality 
@@ -43,7 +42,7 @@
 .mesh
   fill: none
   opacity: 1
-  stroke: #424a5d
+  stroke: #a2a5a7
   stroke-linecap: round
   stroke-linejoin: round
 
