--- a/frontend/app/styles/general/_test.sass
+++ b/frontend/app/styles/general/_test.sass
@@ -15,10 +15,11 @@
 //   opacity: .5
 
 .section
-  opacity: .4
+  opacity: .6
+  stroke: transparent
   stroke-linejoin: round
   &:hover
-    opacity: .6
+    stroke: white
 
 .feature
   fill: transparent
@@ -83,4 +84,15 @@
   stroke-width: 0.5px
   stroke-linejoin: round
   stroke-linecap: round
+  pointer-events: none
+
+.tooltip-map
+  position: absolute
+  text-align: center
+  width: 60px
+  height: 12px
+  padding: 8px
+  margin-top: -20px
+  font-family: 10px sans-serif
+  background: #ddd
   pointer-events: none
