Remove tooltips when zoom event

--- a/frontend/app/styles/general/_test.sass
+++ b/frontend/app/styles/general/_test.sass
@@ -88,11 +88,13 @@
 
 .tooltip-map
   position: absolute
-  text-align: center
-  width: 60px
-  height: 12px
-  padding: 8px
-  margin-top: -20px
-  font-family: 10px sans-serif
-  background: #ddd
+  padding: 2px 8px
+  z-index: 99999
+  font-size: 12px
+  border: solid 1px #ccc
+  background: rgba(255,255,255,.85)
+  box-shadow: 0 0 8px rgba(0,0,0,.2)
+  display: none
   pointer-events: none
+  width: 190px
+  margin-top: -50px
