Style tooltips and place it above cursor

--- a/frontend/app/styles/general/_test.sass
+++ b/frontend/app/styles/general/_test.sass
@@ -86,7 +86,8 @@
   stroke-linecap: round
   pointer-events: none
 
-.tooltip-map
+#tooltip-map
+  color: black
   position: absolute
   padding: 2px 8px
   z-index: 99999
@@ -96,5 +97,28 @@
   box-shadow: 0 0 8px rgba(0,0,0,.2)
   display: none
   pointer-events: none
-  width: 190px
+  width: 160px
   margin-top: -50px
+
+.tooltip-row
+  margin: 4px 0
+
+.tooltip-color-box
+  width: 9px
+  height: 9px
+  margin: 2px 8px 0 0
+  float: left
+  background: grey
+  display: block
+
+.tooltip-votes
+  margin-left: 20px
+
+.tooltip-percent
+  float: right
+
+.pan
+  background-color: #446093
+
+.pri
+  background-color: #73af83
