--- a/frontend/app/templates/components/d3-test.hbs
+++ b/frontend/app/templates/components/d3-test.hbs
@@ -4,13 +4,13 @@
 <div id="tooltip-map">
 	<div class="tooltip-row">
 		<span class="tooltip-color-box pan"></span>
-		<span> PAN</span>
-		<span class="tooltip-votes">633 votos</span>
+		<span class="tooltip-party">PAN</span>
+		<span class="tooltip-votes-pan">633 votos</span>
 		<span class="tooltip-percent">65%</span>
 	</div>
 	<div class="tooltip-row">
 		<span class="tooltip-color-box pri"></span>
-		<span> PRI</span>
+		<span class="tooltip-party"> PRI</span>
 		<span class="tooltip-votes">353 votos</span>
 		<span class="tooltip-percent">35%</span>
 	</div>
