Add keys to map

--- a/frontend/app/styles/general/_test.sass
+++ b/frontend/app/styles/general/_test.sass
@@ -127,4 +127,61 @@
   background-color: #446093
 
 .pri
-  background-color: #73af83
+  background-color: #ce3a3a
+
+////////////////////////////
+
+.map-key
+  position: absolute
+  top: 110px
+  left: 265px
+  font-size: 11px
+  color: #666
+  width: 230px
+  height: 100px
+  z-index: 5
+
+.key-row-header
+  position: relative
+
+.key-row
+  overflow: hidden
+  padding: 3px 0
+  width: 230px
+
+.key-row-label
+  width: 45%
+  float: right
+
+.key-right-label
+    float: right
+    padding: 5px
+    width: 65px
+    margin-right: 75px
+
+.key-left-label
+  padding: 5px
+  width: 10px
+  float: left
+
+.colors-row
+  width: 50%
+  float: left
+
+.color-box
+  width: 25%
+  height: 12px
+  float: left
+  
+.small-vertical-line
+  position: absolute
+  height: 6px
+  border-left: solid 1px #666
+  bottom: -43px
+
+.vertical-line-right-pos
+  left: 101px
+
+.vertical-line-left-pos
+  left: 15px
+
