Change color of tooltip and add others row to mapkey

--- a/frontend/app/templates/components/d3-test.hbs
+++ b/frontend/app/templates/components/d3-test.hbs
@@ -47,4 +47,14 @@
 			<div class="color-box pri" style="opacity:1"></div>
 		</div>
 	</div>
+
+	<div class="key-row">
+		<div class="key-row-label">Otros</div>
+		<div class="colors-row">
+			<div class="color-box otros" style="opacity:.25"></div>
+			<div class="color-box otros" style="opacity:.5"></div>
+			<div class="color-box otros" style="opacity:.75"></div>
+			<div class="color-box otros" style="opacity:1"></div>
+		</div>
+	</div>
 </div>
