--- a/frontend/app/styles/general/_test.sass
+++ b/frontend/app/styles/general/_test.sass
@@ -93,7 +93,7 @@
   z-index: 99999
   font-size: 12px
   border: solid 1px #ccc
-  background: rgba(255,255,255,.85)
+  background: white
   box-shadow: 0 0 8px rgba(0,0,0,.2)
   display: none
   pointer-events: none
@@ -128,6 +128,9 @@
 
 .pri
   background-color: #ce3a3a
+
+.otros
+  background-color: #647329
 
 ////////////////////////////
 
