Enable more zoom in map and change color of states when hover

--- a/frontend/app/styles/general/_test.sass
+++ b/frontend/app/styles/general/_test.sass
@@ -27,7 +27,8 @@
   stroke-linejoin: round
   &:hover
     fill: #a2a5a7
-    opacity: .6
+    stroke: white
+    opacity: .2
 
 .municipality 
   fill: #009688
