--- a/frontend/app/templates/projections.hbs
+++ b/frontend/app/templates/projections.hbs
@@ -1,6 +1,6 @@
 <div class="projections-container">
 	{{projections-toolbar level=level state=state municipality=municipality section=section setState='setState' setMunicipality='setMunicipality' setSection='setSection'}}
 	{{projections-sidebar}}
-	{{d3-test level=level state=state municipality=municipality section=section setState='setState' setMunicipality='setMunicipality' setSection='setSection'}}
+	{{d3-test level=level state=state municipality=municipality section=section federalDistrict=federalDistrict setState='setState' setMunicipality='setMunicipality' setFederalDistrict='setFederalDistrict' setSection='setSection'}}
 	{{!-- {{datamaps-map}} --}}
 </div>
