Add district logic up to municipality level

--- a/frontend/app/styles/general/_test.sass
+++ b/frontend/app/styles/general/_test.sass
@@ -189,3 +189,14 @@
 .vertical-line-left-pos
   left: 15px
 
+.sidebar-text-title
+  margin-top: 50px
+  text-align: center
+
+.sidebar-text-left
+  padding: 10px
+  float: left
+
+.sidebar-text-right
+  padding: 10px
+  float: right
