--- a/frontend/app/templates/components/projections-sidebar.hbs
+++ b/frontend/app/templates/components/projections-sidebar.hbs
@@ -1,2 +1,5 @@
 <div class="projections-sidebar">
+<p class="sidebar-text-title">Division estatal por:</p>
+<p class="sidebar-text-left" {{action 'setMapDivision' "municipal"}}>Municipios</p>
+<p class="sidebar-text-right" {{action 'setMapDivision' "federal"}}>Distritos Federales</p>
 </div>
