Improve style of ember-power-select searchbar

--- a/frontend/app/styles/app.scss
+++ b/frontend/app/styles/app.scss
@@ -3,4 +3,6 @@
 @import 'general/helpers';
 @import 'general/test';
 @import 'app/projections';
+
 @import "ember-power-select";
+@import 'general/searchbar';
