Change name of projections-map component

--- a/frontend/app/templates/maps/projections.hbs
+++ b/frontend/app/templates/maps/projections.hbs
@@ -2,4 +2,4 @@
 
 {{projections-sidebar mapDivision=mapDivision setMapDivision='setMapDivision'}}
 
-{{d3-test level=level state=state municipality=municipality section=section federalDistrict=federalDistrict mapDivision=mapDivision setState='setState' setMunicipality='setMunicipality' setFederalDistrict='setFederalDistrict' setSection='setSection'}}
+{{projections-map level=level state=state municipality=municipality section=section federalDistrict=federalDistrict mapDivision=mapDivision setState='setState' setMunicipality='setMunicipality' setFederalDistrict='setFederalDistrict' setSection='setSection'}}
