Add pointer cursor to links in app

--- a/frontend/app/styles/general/_test.sass
+++ b/frontend/app/styles/general/_test.sass
@@ -196,10 +196,12 @@
 .sidebar-text-left
   padding: 10px
   float: left
+  cursor: pointer
 
 .sidebar-text-right
   padding: 10px
   float: right
+  cursor: pointer
 
 .sidebar-selected
   font-weight: bold
