--- a/frontend/app/templates/components/projections-sidebar.hbs
+++ b/frontend/app/templates/components/projections-sidebar.hbs
@@ -2,4 +2,7 @@
 <p class="sidebar-text-title">Division estatal por:</p>
 <p class="sidebar-text-left {{if isMunicipal "sidebar-selected"}}" {{action 'setMapDivision' "municipal"}}>Municipios</p>
 <p class="sidebar-text-right {{if isFederal "sidebar-selected"}}" {{action 'setMapDivision' "federal"}}>Distritos Federales</p>
+
+
+<p class="sidebar-text-title">{{something.sectionCode}}</p>
 </div>
