--- a/frontend/app/templates/maps/projections.hbs
+++ b/frontend/app/templates/maps/projections.hbs
@@ -1,5 +1,5 @@
 {{projections-toolbar mapDivision=mapDivision level=level state=state municipality=municipality federalDistrict=federalDistrict section=section setState='setState' setMunicipality='setMunicipality' setFederalDistrict='setFederalDistrict' setSection='setSection'}}
 
-{{projections-sidebar mapDivision=mapDivision setMapDivision='setMapDivision'}}
+{{projections-sidebar sectionData=model mapDivision=mapDivision setMapDivision='setMapDivision'}}
 
 {{projections-map level=level state=state municipality=municipality section=section federalDistrict=federalDistrict mapDivision=mapDivision setState='setState' setMunicipality='setMunicipality' setFederalDistrict='setFederalDistrict' setSection='setSection'}}
