Add population map-key

--- a/frontend/app/styles/general/_test.sass
+++ b/frontend/app/styles/general/_test.sass
@@ -130,6 +130,18 @@
 .pri
   background-color: #ce3a3a
 
+.population-100
+  background-color: rgb(127, 0, 0)
+
+.population-75
+  background-color: rgb(239, 101, 72)
+
+.population-50
+  background-color: rgb(252, 141, 89)
+
+.population-25
+  background-color: rgb(254, 232, 200)
+  
 .otros
   background-color: #647329
 
