Display backend projections data in map

--- a/frontend/app/templates/components/projections-map.hbs
+++ b/frontend/app/templates/components/projections-map.hbs
@@ -2,102 +2,8 @@
 	<div id="tiles"></div>
 </div>
 
-
-
 {{#if isPopulation}}
-
-<div id="tooltip-map">
-
-	<div class="tooltip-row">
-		<h6 style="text-align: center;">Sección : {{hoveredSection.section_code}}</h6>
-	</div>
-
-	<div class="tooltip-row">
-		<span class="tooltip-color-box pri"></span>
-		<span class="tooltip-party"> Población</span>
-		<span class="tooltip-votes" style="font-weight: bold;">{{hoveredSection.population}}</span>
-	</div>
-</div>
-
-<div class="map-key">
-	<div class="key-row-header">
-		<div class="key-left-label">
-			Baja Población
-		</div>
-		<span class="small-vertical-line vertical-line-left-pos"></span>
-		<div class="key-right-label">
-			Alta población
-		</div>
-		<span class="small-vertical-line vertical-line-right-pos"></span>
-	</div>
-
-	<div class="key-row">
-		<div class="key-row-label"></div>
-		<div class="colors-row">
-			<div class="color-box population-25"></div>
-			<div class="color-box population-50"></div>
-			<div class="color-box population-75"></div>
-			<div class="color-box population-100"></div>
-		</div>
-	</div>
-</div>
+	{{tooltip-population hoveredSection=hoveredSection}}
 {{else}}
-
-<div id="tooltip-map">
-	<div class="tooltip-row">
-		<span class="tooltip-color-box pan"></span>
-		<span class="tooltip-party">PAN</span>
-		<span class="tooltip-votes-pan">633 votos</span>
-		<span class="tooltip-percent">65%</span>
-	</div>
-	<div class="tooltip-row">
-		<span class="tooltip-color-box pri"></span>
-		<span class="tooltip-party"> PRI</span>
-		<span class="tooltip-votes">353 votos</span>
-		<span class="tooltip-percent">35%</span>
-	</div>
-</div>
-
-<div class="map-key">
-	<div class="key-row-header">
-		<div class="key-left-label">
-			Baja Población
-		</div>
-		<span class="small-vertical-line vertical-line-left-pos"></span>
-		<div class="key-right-label">
-			Alta población
-		</div>
-		<span class="small-vertical-line vertical-line-right-pos"></span>
-	</div>
-
-	<div class="key-row">
-		<div class="key-row-label">PAN</div>
-		<div class="colors-row">
-			<div class="color-box pan" style="opacity:.25"></div>
-			<div class="color-box pan" style="opacity:.5"></div>
-			<div class="color-box pan" style="opacity:.75"></div>
-			<div class="color-box pan" style="opacity:1"></div>
-		</div>
-	</div>
-
-	<div class="key-row">
-		<div class="key-row-label">PRI</div>
-		<div class="colors-row">
-			<div class="color-box pri" style="opacity:.25"></div>
-			<div class="color-box pri" style="opacity:.5"></div>
-			<div class="color-box pri" style="opacity:.75"></div>
-			<div class="color-box pri" style="opacity:1"></div>
-		</div>
-	</div>
-
-	<div class="key-row">
-		<div class="key-row-label">Otros</div>
-		<div class="colors-row">
-			<div class="color-box otros" style="opacity:.25"></div>
-			<div class="color-box otros" style="opacity:.5"></div>
-			<div class="color-box otros" style="opacity:.75"></div>
-			<div class="color-box otros" style="opacity:1"></div>
-		</div>
-	</div>
-</div>
+	{{tooltip-votes sectionsData=sectionsData hoveredSection=hoveredSection}}
 {{/if}}
