Improve look of sections borders when hovered and not hovered

--- a/frontend/app/styles/general/_test.sass
+++ b/frontend/app/styles/general/_test.sass
@@ -17,10 +17,13 @@
 .section
   opacity: .6
   stroke: transparent
-  stroke-opacity: 0.5
+  stroke-opacity: 0.3
   stroke-linejoin: round
   &:hover
-    stroke: white
+    stroke: white !important
+    stroke-opacity: 1
+
+
 
 .feature
   fill: transparent
@@ -30,6 +33,7 @@
     fill: #a2a5a7
     stroke: white
     opacity: .2
+
 
 .municipality 
   fill: #009688
