Update seeds file

--- a/frontend/app/templates/components/tooltip-votes.hbs
+++ b/frontend/app/templates/components/tooltip-votes.hbs
@@ -1,6 +1,11 @@
 
 <div id="tooltip-map">
 	{{#if sectionData}}
+
+	<div class="tooltip-row">
+		<h6 style="text-align: center;">Sección : {{hoveredSection.section_code}}</h6>
+	</div>
+
 	<div class="tooltip-row">
 		<span class="tooltip-color-box pan"></span>
 		<span class="tooltip-party">PAN</span>
