--- a/frontend/app/templates/components/tooltip-votes.hbs
+++ b/frontend/app/templates/components/tooltip-votes.hbs
@@ -17,6 +17,8 @@
 		<span class="tooltip-party"> PRI</span>
 		<span class="tooltip-votes">{{sectionData.PRI}}</span>
 		<span class="tooltip-percent">35%</span>
+		<span class="tooltip-percent">{{firstParty}}</span>
+
 	</div>
 	{{else}}
 		<div class="tooltip-row">
