--- a/frontend/app/templates/components/tooltip-votes.hbs
+++ b/frontend/app/templates/components/tooltip-votes.hbs
@@ -7,20 +7,20 @@
 	</div>
 
 	<div class="tooltip-row">
-		<span class="tooltip-color-box pan"></span>
+		<span class="tooltip-color-box" style="background-color: {{firstPartyColor}};"></span>
 		<span class="tooltip-party">{{firstParty.name}}</span>
 		<span class="tooltip-votes-pan">{{firstParty.votes}}</span>
 		<span class="tooltip-percent">{{firstParty.percentage}}%</span>
 	</div>
 	<div class="tooltip-row">
-		<span class="tooltip-color-box pri"></span>
+		<span class="tooltip-color-box" style="background-color: {{secondPartyColor}};"></span>
 		<span class="tooltip-party">{{secondParty.name}}</span>
 		<span class="tooltip-votes">{{secondParty.votes}}</span>
 		<span class="tooltip-percent">{{secondParty.percentage}}%</span>
 	</div>
 
 	<div class="tooltip-row">
-		<span class="tooltip-color-box pri"></span>
+		<span class="tooltip-color-box otros"></span>
 		<span class="tooltip-party">{{others.name}}</span>
 		<span class="tooltip-votes">{{others.votes}}</span>
 		<span class="tooltip-percent">{{others.percentage}}%</span>
