Bold map key title

--- a/frontend/app/styles/general/_test.sass
+++ b/frontend/app/styles/general/_test.sass
@@ -173,12 +173,14 @@
   float: right
 
 .key-right-label
-    float: right
-    padding: 5px
-    width: 65px
-    margin-right: 75px
+  font-weight: bold
+  float: right
+  padding: 5px
+  width: 65px
+  margin-right: 75px
 
 .key-left-label
+  font-weight: bold
   padding: 5px
   width: 10px
   float: left
